Changelog
== 1.3.5rc2 ==
* Ignore condor_config in .ini when set to DEFAULT, UNAVAILABLE, etc.

== 1.3.5rc1 ==
* Check for duplicate key/values (ignoring case) -- RFC4512 forbids it
* Ignore comment lines in read_ldap
* Remove GlueLocation stanzas for software publication
* Remove configure_gip placeholder

== 1.3.4 ==
* Better error messages for invalid vo maps
* GIP will now look in the config files for the proper user for dropping privileges

== 1.3.3 ==
* Fix wrong location for gip log (OSG SOFTWARE-374)
* Drop privs to user tomcat instead of user daemon
* Publish GRAM version as 5.0 instead of 2.0
* PBS: only add queued jobs as waiting (were counting all non-running jobs
  as queued before)
	
== 1.3.2 ==
* Fix gip_info bug (OSG SOFTWARE-290)
* Clean up gip-validator (MYOSG-25)
* Forward port non-blocking read code (it didn't make it from 1.2.x to 1.3)
	
== 1.3.1 ==
* Bug fix -- we no longer exit with an error if we don't find config.ini
	
== 1.3.0 ==
* Update for RPM install - following FHS, Fedora, and OSG guidelines
	
== 1.2.0alpha0 ==
* Suppress publishing GlueVOInfoTag unless there is a space reservation
* Implement CREAM support 
* Implement HTPC support
* PBS: Better calculate free slots for queues
* Condor: Bug fix for exclude_schedds
* Condor: Support query_only_local_condor option
* LSF: Bug fix (we were publishing LSF queues _only_ if they were _not_ in
  the RVF, which is the exact opposite to what we should do).
* Remove spaces in storage AccessControlBaseRule
* Remove duplicate software locations
* Tighter exception handling for parsing config files, imlpying we should:
* Explicitly return the default for blank config section or option
* Avoid executing temporary/backup files
* Updated unit tests	
	
== 1.1.14 ==
* Bugfix: fix glexec support publishing
	
== 1.1.13 ==
* Bugfix: fix the ACBRs to VOLocalViews
* Bugfix: enable allowed_vos to also work properly on the storage element
* LSF: better parsing of waiting jobs, free slots, host groups